Migrate to gradle

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: NametagEdit
 main: com.nametagedit.plugin.NametagEdit
-version: ${project.version}
+version: ${version}
 api-version: 1.13
 authors: [sgtcaze, Cory, Lorenzo0111, Aurelien30000]
 softdepend: [zPermissions, PermissionsEX, GroupManager, LuckPerms, LibsDisguises, Guilds, PlaceholderAPI]
